lab1/cloudformation/templates/security_groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'NT548-Lab01 - Security Groups Module'

Parameters:
  ProjectName:
    Type: String
    Default: nt548-lab01
  AllowedSshCidr:
    Type: String
    Description: Your IP in CIDR format (e.g., 1.2.3.4/32)
    AllowedPattern: '^(\d{1,3}\.){3}\d{1,3}/\d{1,2}$'

Resources:
  PublicEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${ProjectName}-public-ec2'
      GroupDescription: Allow SSH from specific IP
      VpcId:
        Fn::ImportValue: !Sub '${ProjectName}-VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedSshCidr
          Description: Allow SSH from specific IP
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-ec2'
        - Key: Project
          Value: !Ref ProjectName

  PrivateEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${ProjectName}-private-ec2'
      GroupDescription: Allow SSH from Public EC2
      VpcId:
        Fn::ImportValue: !Sub '${ProjectName}-VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref PublicEC2SecurityGroup
          Description: Allow SSH from Public EC2
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-ec2'
        - Key: Project
          Value: !Ref ProjectName

Outputs:
  PublicEC2SgId:
    Value: !Ref PublicEC2SecurityGroup
    Export:
      Name: !Sub '${ProjectName}-PublicEC2SgId'

  PrivateEC2SgId:
    Value: !Ref PrivateEC2SecurityGroup
    Export:
      Name: !Sub '${ProjectName}-PrivateEC2SgId'
